<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="@dimen/spacing_large">

		<ImageView
			android:id="@+id/logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@mipmap/wolox_logo_large"
			app:layout_constraintBottom_toTopOf="@id/userName"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0" />

		<EditText
			android:id="@+id/userName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/spacing_large"
			android:layout_marginRight="@dimen/spacing_large"
			android:gravity="center"
			android:hint="@string/fragment_example_username"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			app:layout_constraintBottom_toTopOf="@id/password"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed" />

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/spacing_large"
			android:layout_marginTop="@dimen/spacing_large"
			android:layout_marginRight="@dimen/spacing_large"
			android:gravity="center"
			android:hint="@string/fragment_example_password"
			android:inputType="textPassword"
			android:maxLines="1"
			app:layout_constraintBottom_toTopOf="@id/btnLogin"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/userName" />

		<Button
			android:id="@+id/btnLogin"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:text="@string/fragment_example_login"
			app:layout_constraintBottom_toTopOf="@+id/btnSignup"
			app:layout_constraintEnd_toEndOf="@id/userName"
			app:layout_constraintStart_toStartOf="@id/userName"
			app:layout_constraintTop_toBottomOf="@id/password" />

		<Button
			android:id="@+id/btnSignup"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:text="@string/fragment_example_signup"
			app:layout_constraintBottom_toTopOf="@+id/terms"
			app:layout_constraintEnd_toEndOf="@id/userName"
			app:layout_constraintStart_toStartOf="@id/userName"
			app:layout_constraintTop_toBottomOf="@id/btnLogin" />

		<TextView
			android:id="@+id/terms"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/fragment_example_terms"
			android:textSize="@dimen/font_medium_more"
			android:layout_marginTop="@dimen/spacing_large"
			android:layout_marginBottom="@dimen/spacing_large"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@id/userName"
			app:layout_constraintStart_toStartOf="@id/userName" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>